--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "vercel",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "frog": "latest",
-    "hono": "^4",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "frog": "^0.7.4",
+    "hono": "^4.1.3",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "vercel": "latest"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5",
+    "vercel": "^33.6.1"
   }
 }
